objects/Reference_Request_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Reason__c</fullName>
        <label>Approval Reason</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Status_Date__c</fullName>
        <label>Approval Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Released</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delayed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Reference Request Contacts</relationshipLabel>
        <relationshipName>Reference_Request_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Reference_Released__c</fullName>
        <label>Date Reference Released</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Marketer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Reference Request Contacts (Marketer)</relationshipLabel>
        <relationshipName>Reference_Request_Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>On_Site_Visit__c</fullName>
        <inlineHelpText>The event or on site the reference assisted with.</inlineHelpText>
        <label>On Site Visit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Attributes__c</fullName>
        <label>Reference Attributes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reference_Contact_Comments__c</fullName>
        <description>Created as part of CR-9191.</description>
        <label>Reference Contact Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reference_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Contact</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>Contact.Reference_Program_Status__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Reference Request Contacts</relationshipLabel>
        <relationshipName>Reference_Request_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Institution__c</fullName>
        <formula>Reference_Contact__r.Account.Name</formula>
        <label>Reference Institution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference Lead from the related Reference Request.</description>
        <label>Reference Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Reference Request Contacts (Reference Lead)</relationshipLabel>
        <relationshipName>Reference_Request_Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Modules__c</fullName>
        <label>Reference Modules</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reference_Request_Source__c</fullName>
        <formula>Reference_Request__r.Source__c</formula>
        <label>Reference Request Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Request</label>
        <referenceTo>Reference_Request__c</referenceTo>
        <relationshipLabel>Reference Request Contacts</relationshipLabel>
        <relationshipName>Reference_Request_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce_URL__c</fullName>
        <description>Used in Email Templates to send links to custom VF Pages.</description>
        <formula>LEFT($Api.Partner_Server_URL_140,FIND(&apos;.com&apos;,$Api.Partner_Server_URL_140)+4)</formula>
        <label>Salesforce URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Reference Request Contacts (Submitted by)</relationshipLabel>
        <relationshipName>Reference_Request_Contacts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Reference Request Contact</label>
    <nameField>
        <displayFormat>RRC-{0000}</displayFormat>
        <label>Reference Request Contact Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Request Contacts</pluralLabel>
    <recordTypes>
        <fullName>Reference_Contact</fullName>
        <active>true</active>
        <label>Reference Contact</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Status_must_be_Approved_before_Released</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  ISPICKVAL( Approval_Status__c , &quot;Released&quot;) ,
  ISCHANGED( Approval_Status__c ),
  NOT( 
    ISPICKVAL( PRIORVALUE(Approval_Status__c) , &quot;Approved&quot;) 
  )
)</errorConditionFormula>
        <errorDisplayField>Approval_Status__c</errorDisplayField>
        <errorMessage>Approval Status must be Approved prior to Released.</errorMessage>
    </validationRules>
</CustomObject>